Cambio de formato en la paginacion